@@ -544,6 +544,14 @@
     "type": "V"
   },
   {
+    "date": "2018-09-28",
+    "description": "Grand Final Eve",
+    "locale": "en-AU",
+    "notes": "",
+    "region": "VIC",
+    "type": "V"
+  },
+  {
     "date": "2018-10-01",
     "description": "Labour Day",
     "locale": "en-AU",
